--- a/index.html
+++ b/index.html
@@ -17,19 +17,28 @@
 		<div class="header__logo">
 			<img src="./images/logo.png" alt="">
 		</div>
-		<div class="header__title">
-			<h1>Студия депиляции и
-				массажный кабинет
-				в Бресте
-			</h1>
+		<div class="header__wrapper">
+			<div class="header__title">
+				<h1>Студия депиляции и
+					массажный кабинет
+					в Бресте
+				</h1>
+			</div>
+			<div class="header_address">
+				<div class="map-holder"></div>
+				<div class="address">
+					<strong>Мы находимся в центре:</strong>
+					<address>г. Брест, ул. Гоголя, д.65</address>
+					<a href="#" class="map-link">Смотреть на карте</a>
+				</div>
+			</div>
+			<div class="header__contacts">
+				<strong>Звоните, мы сейчас работаем</strong>
+				<address>+375 33 382 24 99</address>
+				<strong>Пн-Вс 9:00-21:00</strong>
+			</div>
+			<button class="header__btn">Записаться онлайн</button>
 		</div>
-		<div class="header_address">
-			<div class="map-holder"></div>
-			<span>Мы находимся в центре:</span>
-			<address>г. Брест, ул. Гоголя, д.65</address>
-		</div>
-		<div class="header__contacts"></div>
-		<button class="header__btn">Записаться онлайн</button>
 	</div>
 	
 	<div class="header__nav">
@@ -44,6 +53,30 @@
 			<a href="#">О студии</a>
 			<a href="#">Контакты</a>
 		</nav>
+	</div>
+	
+	<div class="header__content">
+		<div class="container">
+			<div class="header__text">
+				<p>
+					Хотите избавиться от
+					<strong>нежелательных волос</strong><br>
+					или нужен сеанс
+					<strong>антицеллюлитного массажа?</strong>
+				</p>
+				<ul class="header__list">
+					<li class="item">депиляция воском и Шугаринг;</li>
+					<li class="item">профессиональные сертифицированные мастера;</li>
+					<li class="item">работаем и с женщинами, и с мужчинами;</li>
+					<li class="item">результат уже после первой процедуры.</li>
+				</ul>
+				<button>ПОЛУЧИТЬ КАРТУ<br> КЛИЕНТА БЕСПЛАТНО</button>
+			</div>
+		</div>
+	</div>
+	
+	<div class="header__scroll">
+		<img src="./images/scroll.png" alt="scroll">
 	</div>
 </header>
 
