стилизация десктопной версии

--- a/index.html
+++ b/index.html
@@ -29,13 +29,18 @@
 				<div class="address">
 					<strong>Мы находимся в центре:</strong>
 					<address>г. Брест, ул. Гоголя, д.65</address>
-					<a href="#" class="map-link">Смотреть на карте</a>
+					<a href="#" class="map-link">Смотреть на карте
+						<iframe class="map-hover"
+						        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2451.2515048970904!2d23.696079115680124!3d52.09335417973568!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47210bfa0846eda1%3A0x9d8826f6a26a2b91!2z0YPQuy4g0JPQvtCz0L7Qu9GPIDY1LCDQkdGA0LXRgdGCLCDQkdC10LvQsNGA0YPRgdGM!5e0!3m2!1sru!2sru!4v1593499945858!5m2!1sru!2sru"
+						        width="300" height="200" frameborder="0" style="border:0;" allowfullscreen=""
+						        aria-hidden="false" tabindex="0"></iframe>
+					</a>
 				</div>
 			</div>
 			<div class="header__contacts">
 				<strong>Звоните, мы сейчас работаем</strong>
-				<address>+375 33 382 24 99</address>
-				<strong>Пн-Вс 9:00-21:00</strong>
+				<address class="header__tel">+375 33 382 24 99</address>
+				<strong class="header__clock">Пн-Вс 9:00-21:00</strong>
 			</div>
 			<button class="header__btn">Записаться онлайн</button>
 		</div>
@@ -43,15 +48,15 @@
 	
 	<div class="header__nav">
 		<nav class="nav">
-			<a href="#">Главная</a>
-			<a href="#">Шугаринг и депиляция воском</a>
-			<a href="#">Антицеллюлитный массаж</a>
-			<a href="#">Классический массаж</a>
-			<a href="#">Обучение</a>
-			<a href="#">Косметика для мастеров</a>
-			<a href="#">Статьи</a>
-			<a href="#">О студии</a>
-			<a href="#">Контакты</a>
+			<a class="nav-item" href="#">Главная</a>
+			<a class="nav-item" href="#">Шугаринг и депиляция воском</a>
+			<a class="nav-item" href="#">Антицеллюлитный массаж</a>
+			<a class="nav-item" href="#">Классический массаж</a>
+			<a class="nav-item" href="#">Обучение</a>
+			<a class="nav-item" href="#">Косметика для мастеров</a>
+			<a class="nav-item" href="#">Статьи</a>
+			<a class="nav-item" href="#">О студии</a>
+			<a class="nav-item" href="#">Контакты</a>
 		</nav>
 	</div>
 	
@@ -71,6 +76,10 @@
 					<li class="item">результат уже после первой процедуры.</li>
 				</ul>
 				<button>ПОЛУЧИТЬ КАРТУ<br> КЛИЕНТА БЕСПЛАТНО</button>
+				
+				<div class="header__info-block">
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis, vitae.
+				</div>
 			</div>
 		</div>
 	</div>
@@ -80,6 +89,18 @@
 	</div>
 </header>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
+<script>
+    $(document).ready(function () {
+        $('.header__text').click(function () {
+            $('.header__info-block').toggle();
+        });
+
+        $('a.nav-item').hover(function () {
+            $(this).toggleClass('active')
+        })
+    })
+</script>
 </body>
 </html>
